# Portfolio_RAG

./: .env.example  .gitignore  LICENSE  ProjectPlan.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  run_demo.bat  run_demo.sh
data/: resume.md  secret_memo.md  test.md
evals/: dataset.json  run_eval.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/portfolio_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/portfolio_docs/0/segments/1e5e1708-f8d8-45c4-8848-e08526d1e7ee/: mutable_id_tracker.mappings
qdrant_storage/collections/portfolio_docs/0/segments/48e14fc2-d896-46fa-bbc0-01e18504ae12/: mutable_id_tracker.mappings
qdrant_storage/collections/portfolio_docs/0/segments/d95a66e4-58ff-40ec-bc1e-5260ce0f113e/: mutable_id_tracker.mappings
rag/: ingest.py  store.py
tests/: test_retrieval.py
